# amhello

./: README.md  Readme.md  autogen.sh  configure.ac
lib/: Makefile.am  say.c  say.h
src/: Makefile.am  main.c
